fixed broken webpages and everything is working well. Can take time to fix images on education page.

--- a/education.html
+++ b/education.html
@@ -41,12 +41,12 @@
         <p> I attended Colchester High School in Vermont from 2006-2010. At Colchester I was a member of the Math Team, Student Planning Team, Student Representative on the School Board, and filmed the Varsity Soccer team during my senior year. During my years at CHS I discovered a passion for helping others, problem solving, and mathematics.</p>
       </div>
 
-      <div class="j"></div>
+      <!--<div class="j"></div>
         <img src="images/NCStateLogo.png" title="North Carolina State University">
       <div class="k"></div>
         <img src="images/uvmLogo.jpeg" title="University of Vermont">
       <div class="l"></div>
-      <div class="m"></div>
+      <div class="m"></div> -->
 
       <div class="box k">
       </div>
