--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
   <div class="projectsGrid">
       <h2 class="project-title">Guess my Number</h2>
       <p class="project-description">Its the opposite of 'Pick a Number'. In this web app, you will try to guess the computer's number between 1-100. How quickly can you guess the computers number?!</p>
-<!-- Once we get a screenshot of our 'Guess my Number' game     <a href="g.html"><img class="projectImage" src="images/guess.jpg" title="Pick a Number Screenshot"></a> -->
+      <a href="numberFinder.html"><img class="projectImage" src="images/findnumberscreenshot.JPG" title="Find A Number Screenshot"></a>
     </div>
   <hr>
 
