education images added

--- a/education.html
+++ b/education.html
@@ -41,12 +41,21 @@
         <p> I attended Colchester High School in Vermont from 2006-2010. At Colchester I was a member of the Math Team, Student Planning Team, Student Representative on the School Board, and filmed the Varsity Soccer team during my senior year. During my years at CHS I discovered a passion for helping others, problem solving, and mathematics.</p>
       </div>
 
-      <!--<div class="j"></div>
-        <img src="images/NCStateLogo.png" title="North Carolina State University">
-      <div class="k"></div>
-        <img src="images/uvmLogo.jpeg" title="University of Vermont">
-      <div class="l"></div>
-      <div class="m"></div> -->
+      <div class="j">
+        <img src="images/NCStateLogo.png" title="North Carolina State University" class="educationImages">
+      </div>
+
+      <div class="k">
+        <img src="images/uvmLogo.jpeg" title="University of Vermont" class="educationImages">
+      </div>
+
+      <div class="l">
+        <img src="images/snhu.jpg" title="Southern New Hampshire University" class="educationImages">
+      </div>
+
+      <div class="m">
+        <img src="images/chslogo.png" title="Colchester High School" class="educationImages">
+      </div>
 
       <div class="box k">
       </div>
