--- a/work.html
+++ b/work.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>Work</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="javascript" tpye="text/javascript" href="script.js">
-  </head>
+<head>
+  <title>Work</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="javascript" tpye="text/javascript" href="script.js">
+</head>
 
-  <body>
-    <header>
-      <h1>Work</h1>
-    </header>
+<body>
+  <header>
+    <h1>Work</h1>
+  </header>
 
-    <nav>
-      <div class="box a"><a href="index.html">Home</a></div>
-      <div class="box b"><a href="projects.html">Projects</a></div>
-      <div class="box c"><a href="education.html">Education</a></div>
-      <div class="box d"><a href="work.html">Work</a></div>
-      <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </nav>
+  <nav>
+    <div class="box a">
+      <a href="index.html">Home</a>
+    </div>
+    <div class="box b">
+      <a href="projects.html">Projects</a>
+    </div>
+    <div class="box c">
+      <a href="education.html">Education</a>
+    </div>
+    <div class="box d">
+      <a href="work.html">Work</a>
+    </div>
+    <div class="box e">
+      <a href="goals.html">Aspirations</a>
+    </div>
+  </nav>
 
-<h3>Math Teacher - August 2010-June 2018</h3>
+  <h3>Math Teacher - August 2010-June 2018</h3>
 
-  <p> I have been working at Milton High School for the past eight years. As a math educator I have taught Algebra, Geometry, Statistics, Algebra II, and AP Calculus. My experiences also include being a team leader, graduation speaker, and a coach. As a team leader I organized and facilitated cross-curricular meetings that focused on student needs and improving the learning community. I have coached the Golf Team (2017), Math Team (2011-2018), and Ultimate Frisbee Team (2017-2018). I have been nominated for teacher of the year for the past two years. As an educator I had to work in a team setting, meet the needs of my 'clients', and work in a constantly changing landscape.</p>
-<br>
 
-<h3>Colchester School Board - August 2009- June 2010</h3>
+  <p> I have been working at Milton High School for the past eight years. As a math educator I have taught Algebra, Geometry,
+    Statistics, Algebra II, and AP Calculus. My experiences also include being a team leader, graduation speaker, and a coach.
+    As a team leader I organized and facilitated cross-curricular meetings that focused on student needs and improving the
+    learning community. I have coached the Golf Team (2017), Math Team (2011-2018), and Ultimate Frisbee Team (2017-2018).
+    I have been nominated for teacher of the year for the past two years. As an educator I had to work in a team setting,
+    meet the needs of my 'clients', and work in a constantly changing landscape.</p>
+  <br>
 
-<p>As a senior member of the student planning team I was also selected to be a student member of the Colchester School Board. Although I was a non-voting member of the school board I learned all about the intricate relationships that exist between community, school board, and teachers/staff. This experience still proves to be an important lens to look through now that I am an educator but also a member of the community in which I teach. </p>
+  <h3>Colchester School Board - August 2009- June 2010</h3>
 
-<br>
+  <p>As a senior member of the student planning team I was also selected to be a student member of the Colchester School Board.
+    Although I was a non-voting member of the school board I learned all about the intricate relationships that exist between
+    community, school board, and teachers/staff. This experience still proves to be an important lens to look through now
+    that I am an educator but also a member of the community in which I teach. </p>
 
-<h3>Restaurant Employee / Manager - March 2004-January 2010</h3>
+  <br>
 
-<p> New York Pizza Oven in Colchester was my first job as a high school student. After a few years I became a manager of the restaurant and would open/close while advising the owner on scheduling and hiring decisions. Having this level of responsibility at a young age was crucial to improving my work ethic and realizing how small businesses function. </p>
+  <h3>Restaurant Employee / Manager - March 2004-January 2010</h3>
+
+  <p> New York Pizza Oven in Colchester was my first job as a high school student. After a few years I became a manager of the
+    restaurant and would open/close while advising the owner on scheduling and hiring decisions. Having this level of responsibility
+    at a young age was crucial to improving my work ethic and realizing how small businesses function. </p>
 </body>
 
 </html>
