changed layout a bit

--- a/goals.html
+++ b/goals.html
@@ -1,27 +1,75 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>Aspirations</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="javascript" tpye="text/javascript" href="script.js">
-  </head>
+<head>
+  <title>About Me</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="javascript" tpye="text/javascript" href="script.js">
+</head>
 
-  <body>
-      <header>
-          <h1>Goals</h1>
-      </header>
+<body>
+  <header>
+    <h1>
+      <a id="homeLink" href="index.html">Timothy Lynch</a>
+    </h1>
+  </header>
 
-    <nav>
-      <div class="box a"><a href="index.html">Home</a></div>
-      <div class="box b"><a href="projects.html">Projects</a></div>
-      <div class="box c"><a href="education.html">Education</a></div>
-      <div class="box d"><a href="work.html">Work</a></div>
-      <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </nav>
+  <nav>
+    <div class="indexNav">
+      <a class="navlinkboxes" href="index.html" id="currentPage">Home</a>
+    </div>
+    <div class="projectsNav">
+      <a class="navlinkboxes" href="projects.html">Projects</a>
+    </div>
+    <div class="educationNav">
+      <a class="navlinkboxes" href="education.html">Education</a>
+    </div>
+    <div class="workNav">
+      <a class="navlinkboxes" href="work.html">Work</a>
+    </div>
+    <div class="aboutNav">
+      <a class="navlinkboxes" href="about.html">About Me</a>
+    </div>
+  </nav>
 
-    <p>I consider myself to be a lifelong learner. I love to learn new things and challenge myself as often as possible. I have been going to school continuously for 25 years and now that I have completed my Master's Degree and additional credits I am looking for my next great adventure. I became interested in programming and web development recently after hearing about Burlington Code Academy in the Seven Days. I spent the past few weeks working on <a class="bodyLinks" href="https://www.codecademy.com/" target="_blank">codeacademy.com</a> to explore the field and see if I have a knack for the field. It has been an awesome time so far and while this website needs LOTS of work I am happy that I understand some of the basic structures and processes. </p>
+  <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to see prior work experiences, educational
+    background, and ongoing projects.</p>
+  <br>
+  <p>
+    My name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine
+    and my dog Sawyer. Up until June of this year I was an educator at Milton High School. I am currently enrolled in the
+    Burlington Code Academy and hope to one day work as a developer in Vermont.
 
-  </body>
+  </p>
+  <img src="images/dogandi.JPG" title="Tim (left) and Sawyer (right)" alt="Dog and I" class="center">
+  <p>I consider myself to be a lifelong learner. I love to learn new things and challenge myself as often as possible. I have
+    been going to school continuously for 25 years and now that I have completed my Master's Degree and additional credits
+    I am looking for my next great adventure. In June of 2018 I said goodbye to my colleagues of eight years at Milton High
+    School. I am currently enrolled in Burlington Code Academy and have hopes of finding a position as a web-developer before
+    years end.
+  </p>
+  <br>
+  <footer>
+    <table>
+      <tr>
+        <td>
+          <a href="https://github.com/Loreander">
+            <img src="images/githubLogo.jpg" title="https://github.com/Loreander" class="logo">
+          </a>
+        </td>
+        <td>
+          <a href="https://www.linkedin.com/in/tlynchvt">
+            <img src="images/linkedinLogo.jpg" title="LinkedIn Profile Page" class="logo">
+          </a>
+        </td>
+        <td>
+          <a href="mailto:tlynch.vt@gmail.com">
+            <img src="images/gmailLogo.png" title="tlynch.vt@gmail.com" class="logo">
+          </a>
+        </td>
+      </tr>
+    </table>
+  </footer>
+</body>
 
 </html>
