--- a/index.html
+++ b/index.html
@@ -3,48 +3,52 @@
 
 <!-- This is where we will keep important links and the title of our website -->
 
-  <head>
-    <title>My Info</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="javascript" type="text/javascript" href="script.js">
-  </head>
+<head>
+  <title>My Info</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="javascript" type="text/javascript" href="script.js">
+</head>
 
-<!-- This is where we will keep the main content of our website -->
+<body>
+  <header>
+    <h1 class="center">
+      <a id="homeLink" href="index.html">Timothy Lynch</a>
+    </h1>
+    <div class="homeLogos">
+      <a href="https://github.com/Loreander">
+        <img src="images/githubLogo2.jpg" title="https://github.com/Loreander" class="logo">
+      </a>
+      <a href="https://www.linkedin.com/in/tlynchvt">
+        <img src="images/linkedinLogo2.jpg" title="LinkedIn Profile Page" class="logo">
+      </a>
 
-  <body>
-    <header>
-      <h1>Timothy Lynch</h1>
-<!-- Get this image working soon <div><img src="images/TimAtArrowhead.JPG" class="headerImage" title="Tim and Arrowhead"></div> -->
-    </header>
+      <a href="mailto:tlynch.vt@gmail.com">
+        <img src="images/gmailLogo2.png" title="tlynch.vt@gmail.com" class="logo">
+      </a>
+    </div>
+  </header>
 
-    <nav>
-      <div class="indexNav"><a href="index.html">Home</a></div>
-      <div class="projectsNav"><a href="projects.html">Projects</a></div>
-      <div class="educationNav"><a href="education.html">Education</a></div>
-      <div class="workNav"><a href="work.html">Work</a></div>
-      <div class="goalsNav"><a href="goals.html">Aspirations</a></div>
+  <nav>
+    <div class="aboutNav">
+      <a class="navlinkboxes" href="about.html">About Me</a>
+    </div>
+    <div class="projectsNav">
+      <a class="navlinkboxes" href="projects.html">Projects</a>
+    </div>
+    <div class="educationNav">
+      <a class="navlinkboxes" href="education.html">Education</a>
+    </div>
+    <div class="workNav">
+      <a class="navlinkboxes" href="work.html">Work</a>
+    </div>
+  </nav>
 
-    </nav>
+  <div class="imageBanner">
+    <img src="images/TandCTrain.JPG" class="bannerImage">
+  </div>
 
-    <br>
-
-    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to see prior work experiences, educational background, and ongoing projects.</p>
-    <br>
-    <p>
-      My name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine and my dog Sawyer. Up until June of this year I was an educator at Milton High School. I am currently enrolled in the Burlington Code Academy and hope to one day work as a developer in Vermont.
-
-    </p>
-    <img src="images/dogandi.JPG" title="Tim (left) and Sawyer (right)" alt="Dog and I" class="center">
-    <br>
   <footer>
-    <table>
-      <tr>
-        <td><a href="https://github.com/Loreander"><img src="images/githubLogo.jpg" title="https://github.com/Loreander" class="logo"></a></td>
-        <td><a href="https://www.linkedin.com/in/tlynchvt"><img src="images/linkedinLogo.jpg" title="LinkedIn Profile Page" class="logo"></a></td>
-        <td><a href="mailto:tlynch.vt@gmail.com"><img src="images/gmailLogo.png" title="tlynch.vt@gmail.com" class="logo"></a></td>
-      </tr>
-    </table>
   </footer>
-  </body>
+</body>
 
 </html>
