--- a/work.html
+++ b/work.html
@@ -9,24 +9,23 @@
 
 <body>
   <header>
-    <h1>Work</h1>
+    <h1>
+      <a id="homeLink" href="index.html">Timothy Lynch</a>
+    </h1>
   </header>
 
   <nav>
-    <div class="box a">
-      <a href="index.html">Home</a>
+      <div class="aboutNav">
+          <a class="navlinkboxes" href="about.html">About Me</a>
+        </div>
+    <div class="projectsNav">
+      <a class="navlinkboxes" href="projects.html">Projects</a>
     </div>
-    <div class="box b">
-      <a href="projects.html">Projects</a>
+    <div class="educationNav">
+      <a class="navlinkboxes" href="education.html">Education</a>
     </div>
-    <div class="box c">
-      <a href="education.html">Education</a>
-    </div>
-    <div class="box d">
-      <a href="work.html">Work</a>
-    </div>
-    <div class="box e">
-      <a href="goals.html">Aspirations</a>
+    <div class="workNav">
+      <a class="navlinkboxes" id="currentPage" href="work.html">Work</a>
     </div>
   </nav>
 
@@ -55,6 +54,27 @@
   <p> New York Pizza Oven in Colchester was my first job as a high school student. After a few years I became a manager of the
     restaurant and would open/close while advising the owner on scheduling and hiring decisions. Having this level of responsibility
     at a young age was crucial to improving my work ethic and realizing how small businesses function. </p>
+  <footer>
+    <table>
+      <tr>
+        <td>
+          <a href="https://github.com/Loreander">
+            <img src="images/githubLogo.jpg" title="https://github.com/Loreander" class="logo">
+          </a>
+        </td>
+        <td>
+          <a href="https://www.linkedin.com/in/tlynchvt">
+            <img src="images/linkedinLogo.jpg" title="LinkedIn Profile Page" class="logo">
+          </a>
+        </td>
+        <td>
+          <a href="mailto:tlynch.vt@gmail.com">
+            <img src="images/gmailLogo.png" title="tlynch.vt@gmail.com" class="logo">
+          </a>
+        </td>
+      </tr>
+    </table>
+  </footer>
 </body>
 
 </html>
