--- a/education.html
+++ b/education.html
@@ -1,64 +1,106 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>Education</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="javascript" tpye="text/javascript" href="script.js">
-  </head>
+<head>
+  <title>Education</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="javascript" tpye="text/javascript" href="script.js">
+</head>
 
-  <body>
-    <header>
-      <h1>Education</h1>
-    </header>
-   
-    <nav>
-      <div class="box a"><a href="index.html">Home</a></div>
-      <div class="box b"><a href="projects.html">Projects</a></div>
-      <div class="box c"><a href="education.html">Education</a></div>
-      <div class="box d"><a href="work.html">Work</a></div>
-      <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </nav>
+<body>
+  <header>
+    <h1>
+      <a id="homeLink" href="index.html">Timothy Lynch</a>
+    </h1>
+  </header>
 
-    <div class="grid2">
-      <div class="box f">
-        <h3>Post-Graduate</h3>
-        <p>Once I completed my Master's degree in Curriculum and Instruction I looked to complete my +30 by taking a variety of education classes through learnersedge.com. Learner's Edge was a great fit for a full-time educator that was looking to take classes during school and over the summer. I was able to complete ten classes over the past two years in a variety of topics including technology integration, student motivation, arts integration, and brain research. </p>
-      </div>
-
-      <div class="box g">
-        <h3>Graduate</h3>
-        <p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed mindsets. You can see me Prezi discussing my action research project <a class="bodyLinks" href="http://prezi.com/6_11bfwl_6hg/?utm_campaign=share&utm_medium=copy">here</a>. </p>
-      </div>
-
-      <div class="box h">
-        <h3>Under-Graduate</h3>
-        <p> For my post-secondary education I spent a year at North Carolina State majoring in Mathematics and Education. During my sophomore year I transferred from the NCSU to the University of Vermont. I graduated from UVM in the spring of 2010 with a degree in Secondary Education and a focus in mathematics. </p>
-      </div>
-
-      <div class="box i">
-        <h3>High School</h3>
-        <p> I attended Colchester High School in Vermont from 2006-2010. At Colchester I was a member of the Math Team, Student Planning Team, Student Representative on the School Board, and filmed the Varsity Soccer team during my senior year. During my years at CHS I discovered a passion for helping others, problem solving, and mathematics.</p>
-      </div>
-
-      <div class="j">
-        <img src="images/NCStateLogo.png" title="North Carolina State University" class="educationImages">
-      </div>
-
-      <div class="k">
-        <img src="images/uvmLogo.jpeg" title="University of Vermont" class="educationImages">
-      </div>
-
-      <div class="l">
-        <img src="images/snhu.jpg" title="Southern New Hampshire University" class="educationImages">
-      </div>
-
-      <div class="m">
-        <img src="images/chslogo.png" title="Colchester High School" class="educationImages">
-      </div>
-
-      <div class="box k">
-      </div>
+  <nav>
+      <div class="aboutNav">
+          <a class="navlinkboxes" href="about.html">About Me</a>
+        </div>
+    <div class="projectsNav">
+      <a class="navlinkboxes" href="projects.html">Projects</a>
     </div>
-  </body>
+    <div class="educationNav">
+      <a class="navlinkboxes" id="currentPage" href="education.html">Education</a>
+    </div>
+    <div class="workNav">
+      <a class="navlinkboxes" href="work.html">Work</a>
+    </div>
+  </nav>
+
+  <div class="grid2">
+    <div class="box f">
+      <h3>Post-Graduate</h3>
+      <p>Once I completed my Master's degree in Curriculum and Instruction I looked to complete my +30 by taking a variety of
+        education classes through learnersedge.com. Learner's Edge was a great fit for a full-time educator that was looking
+        to take classes during school and over the summer. I was able to complete ten classes over the past two years in
+        a variety of topics including technology integration, student motivation, arts integration, and brain research. </p>
+    </div>
+
+    <div class="box g">
+      <h3>Graduate</h3>
+      <p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program
+        was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action
+        research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed
+        mindsets. You can see me Prezi discussing my action research project
+        <a class="bodyLinks" href="http://prezi.com/6_11bfwl_6hg/?utm_campaign=share&utm_medium=copy">here</a>. </p>
+    </div>
+
+    <div class="box h">
+      <h3>Under-Graduate</h3>
+      <p> For my post-secondary education I spent a year at North Carolina State majoring in Mathematics and Education. During
+        my sophomore year I transferred from the NCSU to the University of Vermont. I graduated from UVM in the spring of
+        2010 with a degree in Secondary Education and a focus in mathematics. </p>
+    </div>
+
+    <div class="box i">
+      <h3>High School</h3>
+      <p> I attended Colchester High School in Vermont from 2006-2010. At Colchester I was a member of the Math Team, Student
+        Planning Team, Student Representative on the School Board, and filmed the Varsity Soccer team during my senior year.
+        During my years at CHS I discovered a passion for helping others, problem solving, and mathematics.</p>
+    </div>
+
+    <div class="j">
+      <img src="images/NCStateLogo.png" title="North Carolina State University" class="educationImages">
+    </div>
+
+    <div class="k">
+      <img src="images/uvmLogo.jpeg" title="University of Vermont" class="educationImages">
+    </div>
+
+    <div class="l">
+      <img src="images/snhu.jpg" title="Southern New Hampshire University" class="educationImages">
+    </div>
+
+    <div class="m">
+      <img src="images/chslogo.png" title="Colchester High School" class="educationImages">
+    </div>
+
+    <div class="box k">
+    </div>
+  </div>
+  <footer>
+    <table>
+      <tr>
+        <td>
+          <a href="https://github.com/Loreander">
+            <img src="images/githubLogo2.jpg" title="https://github.com/Loreander" class="logo">
+          </a>
+        </td>
+        <td>
+          <a href="https://www.linkedin.com/in/tlynchvt">
+            <img src="images/linkedinLogo.jpg" title="LinkedIn Profile Page" class="logo">
+          </a>
+        </td>
+        <td>
+          <a href="mailto:tlynch.vt@gmail.com">
+            <img src="images/gmailLogo.png" title="tlynch.vt@gmail.com" class="logo">
+          </a>
+        </td>
+      </tr>
+    </table>
+  </footer>
+</body>
+
 </html>
