Updated landing page

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     </div>
   </nav>
 
-  <div class="imageBanner">
-    <img src="images/TandCTrain.JPG" class="bannerImage">
+  <div class="imageGrid">
+    <img id="leftImage" src="images/TandCTrain.JPG" title="Tim and Christine on Train">
+    <img id="centerImage" src="images/TandCBluePaddle.JPG" title="Tim and Christine at Blue Paddle Restaurant">
+    <img id="rightImage" src="images/Tim Christine and Tyler Colorado.JPG" title="Tim, Christine, and Tyler at Rockies Game">
   </div>
 
-  <footer>
-  </footer>
 </body>
 
 </html>
