updated website soon to include pomodoro timer

--- a/about.html
+++ b/about.html
@@ -30,23 +30,25 @@
         </div>
     </nav>
 
-    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to see prior work experiences, educational
-        background, and ongoing projects.</p>
-    <br>
-    <p>
-        My name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine
-        and my dog Sawyer. Up until June of this year I was an educator at Milton High School. I am currently enrolled in
-        the Burlington Code Academy and hope to one day work as a developer in Vermont.
+    <div class="bio">
+        <br>
+        <h3 class="center">Early Life</h3>
+        <p> 
 
-    </p>
-    <img src="images/dogandi.JPG" title="Tim (left) and Sawyer (right)" alt="Dog and I" class="center">
-    <p>I consider myself to be a lifelong learner. I love to learn new things and challenge myself as often as possible. I have
-        been going to school continuously for 25 years and now that I have completed my Master's Degree and additional credits
-        I am looking for my next great adventure. In June of 2018 I said goodbye to my colleagues of eight years at Milton
-        High School. I am currently enrolled in Burlington Code Academy and have hopes of finding a position as a web-developer
-        before years end.
-    </p>
-    <br>
+        </p>
+        <br>
+        <h3 class="center">High School and College</h3>
+        <img id="aboutImage" src="images/dogandi.JPG" title="Tim (left) and Sawyer (right)" alt="Dog and I">
+        <p>I consider myself to be a lifelong learner. I love to learn new things and challenge myself as often as possible. I have
+            been going to school continuously for 25 years and now that I have completed my Master's Degree and additional credits
+            I am looking for my next great adventure. In June of 2018 I said goodbye to my colleagues of eight years at Milton
+            High School. I am currently enrolled in Burlington Code Academy and have hopes of finding a position as a web-developer
+            before years end.
+        </p>
+        <br>
+        <h4></h4>
+        <br>
+    </div>
     <footer>
         <table>
             <tr>
