--- a/education.html
+++ b/education.html
@@ -85,7 +85,7 @@
       <tr>
         <td>
           <a href="https://github.com/Loreander">
-            <img src="images/githubLogo2.jpg" title="https://github.com/Loreander" class="logo">
+            <img src="images/githubLogo.jpg" title="https://github.com/Loreander" class="logo">
           </a>
         </td>
         <td>
