--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     </div>
   </nav>
 
+  <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to see prior work experiences, educational
+      background, and ongoing projects.</p>
+      
   <div class="imageGrid">
     <img id="leftImage" src="images/TandCTrain.JPG" title="Tim and Christine on Train">
     <img id="centerImage" src="images/TandCBluePaddle.JPG" title="Tim and Christine at Blue Paddle Restaurant">
