--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
   <div class="projectsGrid">
     <h2 class="project-title">Markdown Preview</h2>
     <p class="project-description">The Markdown Preview web app simply converts a user string into markdown text. Markdown text is a shorthand way of defining
-      certain html contents. If the user types in '# testing', it will display 'testing' using the h1 stylings</p>
+      certain html contents. If the user types in '# testing', it will display 'testing' using the h1 stylings. There have been many iterations of this website. The most recent update took away the 'render' button. In its place, the text will automatically render on <i>keyup</i>.</p>
     <a href="markdown.html">
       <img class="projectImage" src="images/MarkdownScreenshot.JPG" title="Markdown Preview Screenshot">
     </a>
@@ -64,6 +64,13 @@
     </a>
   </div>
   <hr>
+  <div class="projectsGrid">
+    <h2 class="project-title">Pomodoro Timers</h2>
+    <p class="project-description">We were tasked with creating a timer that could be used to monitor time on task and set reasonable time goals. This timer can be set using the seconds, minutes, hours, up to 12 hours, 59 minutes, and 59 seconds.</p>
+    <a href="numberFinder.html">
+      <img class="projectImage" src="images/findnumberscreenshot.JPG" title="Find A Number Screenshot">
+    </a>
+  </div>
 
   <footer>
     <table>
