--- a/work.html
+++ b/work.html
@@ -29,23 +29,25 @@
     </div>
   </nav>
 
-  <h3>Math Teacher - August 2010-June 2018</h3>
+  <video id="gradVideo" src="images/graduationSpeech.mp4" controls>
+    <p>Your browser doesn't support HTML5 Video Content.</p>
+  </video>
 
+  <h3>Math Teacher - August 2010-June 2018</h3>
 
   <p> I have been working at Milton High School for the past eight years. As a math educator I have taught Algebra, Geometry,
     Statistics, Algebra II, and AP Calculus. My experiences also include being a team leader, graduation speaker, and a coach.
     As a team leader I organized and facilitated cross-curricular meetings that focused on student needs and improving the
     learning community. I have coached the Golf Team (2017), Math Team (2011-2018), and Ultimate Frisbee Team (2017-2018).
     I have been nominated for teacher of the year for the past two years. As an educator I had to work in a team setting,
-    meet the needs of my 'clients', and work in a constantly changing landscape.</p>
+    meet the needs of my 'clients', and work in a constantly changing landscape. Check out my graduation speech to the right!</p>
   <br>
 
   <h3>Colchester School Board - August 2009- June 2010</h3>
 
-  <p>As a senior member of the student planning team I was also selected to be a student member of the Colchester School Board.
+  <p>As a senior member of the student planning team at Colchester High School, I was also selected to be a student member of the Colchester School Board.
     Although I was a non-voting member of the school board I learned all about the intricate relationships that exist between
-    community, school board, and teachers/staff. This experience still proves to be an important lens to look through now
-    that I am an educator but also a member of the community in which I teach. </p>
+    community, school board, and teachers/staff. This experience still impacts me to this day when dealing with difficult situations and groups of people with different beliefs. 
 
   <br>
 
