changed projects page

--- a/markdown.html
+++ b/markdown.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="markdown.css">
   <script rel="javascript" type="text/javascript" src="markdown.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script></script>
 </head>
 
 <body>
@@ -51,7 +52,7 @@
                 </tr>
             </table>
         </div>
-        <textarea id="source" class="sourceText" onkeyup="onClickPreview()">
+        <textarea id="source" class="sourceText" onkeyup="onKeyPreview()">
 # Markdown is so cool because it is...
 1. Easy to use
 2. Versatile
