--- a/projects.html
+++ b/projects.html
@@ -67,8 +67,8 @@
   <div class="projectsGrid">
     <h2 class="project-title">Pomodoro Timers</h2>
     <p class="project-description">We were tasked with creating a timer that could be used to monitor time on task and set reasonable time goals. This timer can be set using the seconds, minutes, hours, up to 12 hours, 59 minutes, and 59 seconds.</p>
-    <a href="numberFinder.html">
-      <img class="projectImage" src="images/findnumberscreenshot.JPG" title="Find A Number Screenshot">
+    <a href="projects/tomatotimer/timer.html">
+      <img class="projectImage" src="images/timer.JPG" title="Pomodoro Timer Screenshot">
     </a>
   </div>
 
