small updates and got rid of yelpington repo

--- a/projects/guess/guess.html
+++ b/projects/guess/guess.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="guessCore.js"></script>
+        <script src="./guessCore.js"></script>
         <script>
             module = {}
         </script>
-        <link rel="stylesheet" type="text/css" href="guess.css">
+        <link rel="stylesheet" type="text/css" href="./guess.css">
     </head>
     <body>
 
