--- a/projects/markdown/markdown.html
+++ b/projects/markdown/markdown.html
@@ -5,8 +5,8 @@
 
 <head>
   <title>Markdown Previewer</title>
-  <link rel="stylesheet" type="text/css" href="markdown.css">
-  <script rel="javascript" type="text/javascript" src="markdown.js"></script>
+  <link rel="stylesheet" type="text/css" href="./markdown.css">
+  <script rel="javascript" type="text/javascript" src="./markdown.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script></script>
 </head>
