--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
     <h2 class="project-title">Markdown Preview</h2>
     <p class="project-description">The Markdown Preview web app simply converts a user string into markdown text. Markdown text is a shorthand way of defining
       certain html contents. If the user types in '# testing', it will display 'testing' using the h1 stylings. There have been many iterations of this website. The most recent update took away the 'render' button. In its place, the text will automatically render on <i>keyup</i>.</p>
-    <a href="markdown.html">
+    <a href="./projects/markdown/markdown.html">
       <img class="projectImage" src="images/MarkdownScreenshot.JPG" title="Markdown Preview Screenshot">
     </a>
   </div>
@@ -49,7 +49,7 @@
     <h2 class="project-title">Pick a Number</h2>
     <p class="project-description">The Pick a Number web app will ask you to guess a number from 1-100. Then you will tell the computer if your number is
       higher or lower. Eventually the computer will guess your number!</p>
-    <a href="guess.html">
+    <a href="./projects/guess/guess.html">
       <img class="projectImage" src="images/guess.jpg" title="Pick a Number Screenshot">
     </a>
   </div>
@@ -59,7 +59,7 @@
     <h2 class="project-title">Guess my Number</h2>
     <p class="project-description">Its the opposite of 'Pick a Number'. In this web app, you will try to guess the computer's number between 1-100. How
       quickly can you guess the computers number?!</p>
-    <a href="numberFinder.html">
+    <a href="./projects/numberfinder/numberFinder.html">
       <img class="projectImage" src="images/findnumberscreenshot.JPG" title="Find A Number Screenshot">
     </a>
   </div>
@@ -71,6 +71,14 @@
       <img class="projectImage" src="images/timer.JPG" title="Pomodoro Timer Screenshot">
     </a>
   </div>
+  <hr>
+  <div class="projectsGrid">
+      <h2 class="project-title">Yelpington</h2>
+      <p class="project-description">The Yelpington app is designed to use AJAX and JSON files to populate a website with restaurant information and location. The app uses "Open Street Maps API" to display a map of the area surrounding the restaurent in question as well as a marker over its exact location.</p>
+      <a href="projects/yelpington/index.html">
+        <img class="projectImage" src="images/yelpington.JPG" title="Yelpington Project Screenshot">
+      </a>
+    </div>
 
   <footer>
     <table>
