--- a/projects/numberfinder/numberFinder.html
+++ b/projects/numberfinder/numberFinder.html
@@ -3,8 +3,8 @@
     <head>
         <title>Number Finder</title>
         <script> let module = {};</script>
-        <script type="text/javascript" src="numberFind-core.js"></script>
-        <link type="text/css" rel="stylesheet" href="numberFinder.css">
+        <script type="text/javascript" src="./numberFind-core.js"></script>
+        <link type="text/css" rel="stylesheet" href="./numberFinder.css">
     </head>
 
 
