removed anchor href for yelpington, killing the link

--- a/projects.html
+++ b/projects.html
@@ -74,8 +74,8 @@
   <hr>
   <div class="projectsGrid">
       <h2 class="project-title">Yelpington</h2>
-      <p class="project-description">The Yelpington app is designed to use AJAX and JSON files to populate a website with restaurant information and location. The app uses "Open Street Maps API" to display a map of the area surrounding the restaurent in question as well as a marker over its exact location.</p>
-      <a href="projects/yelpington/index.html">
+      <p class="project-description">The Yelpington app is designed to use AJAX and JSON files to populate a website with restaurant information and location. The app uses "Open Street Maps API" to display a map of the area surrounding the restaurent in question as well as a marker over its exact location. Given that a server is required there is currently no access to this app.</p>
+      <a href="#">
         <img class="projectImage" src="images/yelpington.JPG" title="Yelpington Project Screenshot">
       </a>
     </div>
